# enso

./: CHANGELOG.md  Cargo.toml  build.sbt  postgres_sandbox.enso
.space/: Dockerfile  gui.devfile.yaml
app/gui/: Cargo.toml
app/gui/src/controller/: searcher.rs
app/gui/src/controller/searcher/: breadcrumbs.rs
app/gui/src/model/suggestion_database/: entry.rs  mock.rs
app/gui/suggestion-database/src/: entry.rs  mock.rs
app/ide-desktop/: .gitignore  bundle.ts  eslint.config.js  package-lock.json  package.json
app/ide-desktop/lib/cloud/: .eslintrc.js  package.json
app/ide-desktop/lib/content/: bundle.ts  esbuild-config.ts  package.json  start.ts  watch-cloud.ts  watch-desktop.ts  watch.ts
app/ide-desktop/lib/dashboard/: tsconfig.json
app/ide-desktop/lib/types/: globals.d.ts
lib/rust/auth/: Cargo.toml
lib/rust/bitvector_simd/: Cargo.toml  LICENSE
lib/rust/ensogl/core/src/: dom.rs  (+1 more)
lib/rust/ensogl/example/: Cargo.toml
lib/rust/ensogl/examples/: Cargo.toml
lib/rust/frp/src/: nodes.rs
lib/rust/frp2/src/: lib.rs  nodes.rs
lib/rust/lazy/: Cargo.toml
lib/rust/lazy/src/: lib.rs
lib/rust/sets/: Cargo.toml
lib/rust/tc/: Cargo.toml  README.md
lib/rust/tc/src/: bwd.rs  fwd.rs  lib.rs  types.rs
lib/rust/web/src/: lib.rs
lib/wip/tc/: Cargo.toml
lib/wip/tc/src/: bwd.rs  fwd.rs  lib.rs  types.rs
test/Benchmarks/src/Table/: Sum_Large.enso
test/Table_Tests/src/Database/: SQLite_Spec.enso
test/Table_Tests/src/In_Memory/: Table_Spec.enso
test/Tests/src/: Main.enso
test/Tests/src/Data/: Complex_Spec.enso  Vector_Spec.enso
tools/enso4igv/: .gitignore  pom.xml
(+177 files in other folders)
