[package]
name = "bitvector_simd"
description = "bitvector implemented with Packed SIMD 2"
authors = ["Horasal"]
version = "0.2.3"
edition = "2018"
homepage = "https://github.com/horasal/bitvector_simd"
license = "MIT"
readme = "README.md"
repository = "https://github.com/horasal/bitvector_simd"
keywords = ["bitvector"]

[dependencies]
packed_simd = { version = "0.3.7", package = "packed_simd_2" }

[dev-dependencies]
criterion = "0.4"
bit-vec = "0.6"
bitvec = "1.0.1"

[[bench]]
name = "comparison"
harness = false
